# nicman

./: CHANGELOG.md  Cargo.toml  FEATURES.md  IMPLEMENTATION_REPORT.md  PROJECT_SUMMARY.md  README.md  UI_IMPROVEMENT_REPORT.md  WARNING_FIX_REPORT.md  readme.md  test_integration.sh
.augment/: validate-rules.sh
.augment/config/: rule-triggers.yaml
.augment/logs/: validation-report-20251008-215901.md  validation-report-20251008-220025.md  validation-report-20251008-220322.md  validation-report-20251008-220652.md  validation-report-20251008-220925.md  validation-report-20251008-222221.md  validation-report-20251008-222850.md  validation-report-20251009-075959.md  validation-report-20251009-093718.md
.augment/rules/always/: 01-time-handling-always.md  02-chinese-communication-always.md  03-anti-hallucination-always.md  04-error-handling-always.md
.augment/rules/auto/: time-validation-auto.md
.augment/rules/manual/: user-guidelines-enforcement-manual.md
src/: main.rs  model.rs  ui.rs
src/backend/: mod.rs  netplan.rs  owner_detection.rs  removal.rs  runtime.rs  traffic.rs
src/utils/: command.rs  format.rs  mod.rs
