[package]
name = "nicman"
version = "0.1.0"
edition = "2024"
authors = ["Network Interface Manager"]
description = "A TUI-based network interface management tool for Linux"

[dependencies]
# TUI框架
ratatui = "0.26"
crossterm = "0.27"

# 命令行参数解析
clap = { version = "4.5", features = ["derive"] }

# 序列化和配置文件处理
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# 异步运行时（用于流量监控）
tokio = { version = "1.35", features = ["full", "time", "process"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 系统调用
nix = { version = "0.28", features = ["user", "process", "signal"] }

# 正则表达式（解析命令输出）
regex = "1.10"

# 时间处理
chrono = "0.4"
